07/12/2020
==========
Enchanced: Add virtual-scroll. brwfast.prg 

04/12/2020 Version 1.2
======================
Enchanced Browse: TWebBrowse ready. CRUD. See examples brw-edit.prg, brw-edit-dbf.prg

24/11/2020
==========
Enchanced Add id in tab folder

17/11/2020
==========
Modified: TWebGet Icon space
Enchanced: TWebBrowse Toolbar
Enchanced: TWebGet CLAUSE BTNID for identifier btn id
New: Start TWebControl() for javascript. Not finish yet

11/11/2020
==========
Enchanced: Combobox CLAUSE KeyValue. See combo-hash.prg

07/11/2020
==========
Enchanced: MsgLoading() Can show header.
Example: browse-dblclick-edit.prg . Thanks Ralph del Castillo

02/11/2020
==========
New: Example switch control. See switch.prg
Enchanced: MsgInfo accept any value

24/10/2020
==========
New: Example sessions & autenticate with a easy app. See examples/sessions/app
Enchanced: Command ROW. New clause TOP & BOTTOM. You can control margin-top and margin-bottom of row. See tutor8b.prg
Enchanced: Command SAY. New clause LINK. See say-link.prg

21/10/2020
==========
New: Sessions system is ready !. 
	See test_session.prg, test_session_read.prg, test_session_end.prg

20/10/2020
==========
Enchanced: New clause for get label: FONTLABEL. See get-font2

19/10/2020
==========
New: GETNUMBER control for use in tablets. See get-num.prg
Bug: Font solved when focus
New: Browse Multiselect. See browse-select

07/10/2020
==========
Example: Use HTML command. html.prg

05/10/2020
==========
Enchanced: TWebFolder() propertie :lBorder. See folder3.prg
Enchanced: TWebFolder() Tab clause class. See folder3.prg

30/09/2020
==========
Enchanced: TWebGet() clause LINK. See get-link.prg

29/09/2020
==========
New: JS TWebBrwSearch(). See brwsearch.prg
Updated: TWebFolder() Option working

28/09/2020
==========
Enchanced: TWebGet multi-button. See get-btn.prg

27/09/2020
==========
Enchanced: TWebGet align


25/09/2020
==========
New: TWebImage. See image.prg