@@ -941,63 +941,6 @@ function TWebBrowsePostEdit( row, index, oBrw, aCfgCols ) {
 	}	
 }
 
-
-
-//	-------------------------------------------------------------------------------------//
-
-/*	List rows in table and select one of them	*/
-
-function TWebBrwSelect( headers, rows, fCallback, cTitle ) {
-
-	cTitle 	= (typeof cTitle ) == 'string' ? cTitle : '<i class="far fa-check-square"></i> Select' ;
-	
-	var nBrwHeight 	= 400
-	var cMsg 		= '<table id="_twebbrwselect" class="table-sm table-striped" ' + 
-						'data-single-select="true" data-click-to-select="true" ' + 
-						'data-height=' + nBrwHeight + ' data-toggle="table" data-search="true" data-locale="en-US">' + 
-						'<thead class="thead-dark"><tr>' + 
-						'<th data-field="c" data-checkbox="true"></th>' 
-					
-		for (var key in headers ) {															
-			cMsg += '<th data-field="' + key + '">' + headers[key] + '</th>' 
-		}
-
-		cMsg += '</tr></thead></table>'
-
-	var dialog = bootbox.dialog({
-		title: cTitle,
-		message: cMsg,
-		size: 'large',
-		backdrop: false,
-		onEscape: true, 
-		className: 'bounce fadeOut',
-		buttons: {
-			confirm: {
-				label: '<i class="fa fa-check"></i> Accept',
-				className: 'btn-outline-success',
-				callback: function(result) {	
-
-					if ( typeof fCallback === "function") {
-
-						var row_num = oBrw.Select()
-						
-						if ( row_num.length > 0 ) {
-							var row = row_num[0]											
-							fCallback.apply(null, [row] );
-						}																			
-					}							
-				}
-			}
-		}
-	});
-
-	dialog.init(function(){ 
-		oBrw = new TWebBrowse( '_twebbrwselect' )
-		oBrw.Init()						
-		oBrw.SetData( rows ) 
-	})				
-}	
-
 //	-------------------------------------------------------------------------------------//
 
 function TWebBrwSearch( cUrl, aHeaders, fCallback, cSearch, cTitle, oValues ) {
@@ -1107,6 +1050,95 @@ function TWebBrwSearch( cUrl, aHeaders, fCallback, cSearch, cTitle, oValues ) {
 	
 	
 }
+
+//	-------------------------------------------------------------------------------------//
+
+/*	List rows in table and select one of them	*/
+
+function TWebBrwSelect( aHeaders, aData, fCallback, cTitle, oOptions ) {
+
+	cTitle 		= (typeof cTitle ) == 'string' ? cTitle : '<i class="fas fa-search"></i> Buscar' ;
+
+	var nBrwHeight = 300 
+	
+	if ( typeof oOptions == 'undefined' )
+		oOptions = new Object()	
+	
+	if ( ! ( 'search' in oOptions )  )		
+		oOptions[ 'search' ]	= true 
+	
+	if ( 'height' in oOptions ) 		
+		nBrwHeight = oOptions[ 'height' ]	
+	
+	var cMsg 		=   '<table id="_twebbrwselect" class="table-sm table-striped" ' + 
+						'data-single-select="true" data-click-to-select="true" ' + 
+
+						'data-locale="es-ES" ' + 
+						'data-height=' + nBrwHeight + ' data-toggle="table" ' 
+						
+		if ( 'search' in oOptions ) {
+		
+			if ( oOptions[ 'search' ] ) {
+		
+				cMsg += 'data-search="true" ' +
+						//'data-show-search-button="true" ' + 
+						'data-show-search-clear-button="true" '					
+			}
+		}				
+		
+		cMsg += '>'						
+		
+		cMsg += '<thead class="thead-dark"><tr>' + 
+				'<th data-field="c" data-checkbox="true"></th>' 
+					
+		for (var key in aHeaders ) {							
+			cMsg += '<th data-field="' + key + '">' + aHeaders[key] + '</th>' 
+		}
+
+		cMsg += '</tr></thead></table>'
+
+	var dialog = bootbox.dialog({
+		title: cTitle,
+		message: cMsg,
+		size: 'large',
+		backdrop: false,
+		onEscape: true, 
+		className: 'bounce fadeOut',
+		buttons: {
+			confirm: {
+				label: '<i class="fa fa-check"></i> Accept',
+				className: 'btn-outline-success',
+				callback: function(result) {	
+
+					if ( typeof fCallback === "function") {
+
+						var row_num = oBrw.Select()
+						
+						if ( row_num.length > 0 ) {
+							var row = row_num[0]											
+							fCallback.apply(null, [row] );
+						}																			
+					}							
+				}
+			}
+		}
+	});
+	
+	var oBrw
+
+	dialog.init(function(){ 
+		oBrw = new TWebBrowse( '_twebbrwselect' )
+		oBrw.Init()				
+		
+		oBrw.SetData( aData )	
+
+		dialog.bind('shown.bs.modal', function(){
+		
+		});								
+	})				
+	
+}
+
 
 //	-------------------------------------------------------------------------------------//
 
